--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,6 @@
 {% extends 'base-' + display_region + '.html' %}
 
-{% if display_region == 'ni' %}
-    {% set contact_us_link = domain_url_ni + '/contact-us/' %}
-{% elif display_region == 'cy' %}
+{% if display_region == 'cy' %}
     {% set contact_us_link = domain_url_cy + '/cysylltu-a-ni/' %}
 {% else %}
     {% set contact_us_link = domain_url_en + '/contact-us/' %}
