--- a/app/templates/closed.html
+++ b/app/templates/closed.html
@@ -1,6 +1,4 @@
-{% if display_region == 'ni' %}
-    {% extends 'base-ni.html' %}
-{% elif display_region == 'cy' %}
+{% if display_region == 'cy' %}
     {% extends 'base-cy.html' %}
 {% else %}
     {% extends 'base-en.html' %}
