--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,7 +1,4 @@
-{% if display_region == 'ni' %}
-    {% extends 'base-ni.html' %}
-    {% set contact_us_link = domain_url_en + '/contact-us/' %}
-{% elif display_region == 'cy' %}
+{% if display_region == 'cy' %}
     {% extends 'base-cy.html' %}
     {% set contact_us_link = domain_url_cy + '/cysylltu-a-ni/' %}
 {% else %}
