--- a/app/templates/web-form-too-many-requests.html
+++ b/app/templates/web-form-too-many-requests.html
@@ -2,23 +2,13 @@
 
 {% from "components/breadcrumb/_macro.njk" import onsBreadcrumb %}
 
-{%- if display_region == 'ni' -%}
-    {%- set contact_us_link = domain_url_ni + '/contact-us/' -%}
-{%- elif display_region == 'cy' -%}
+{%- if display_region == 'cy' -%}
     {%- set contact_us_link = domain_url_cy + '/cysylltu-a-ni/' -%}
 {%- else -%}
     {%- set contact_us_link = domain_url_en + '/contact-us/' -%}
 {%- endif -%}
 
-{% if display_region == 'ni' %}
-    {% set breadcrumb_items = [
-                {
-                    "url": domain_url_ni,
-                    "text": 'Home'
-                }
-            ]
-    %}
-{% elif display_region == 'cy' %}
+{% if display_region == 'cy' %}
     {% set breadcrumb_items = [
                 {
                     "url": domain_url_cy,
