--- a/app/templates/request-code-enter-address.html
+++ b/app/templates/request-code-enter-address.html
@@ -17,17 +17,15 @@
 {%- set form =  {
     'method': 'POST',
     'attributes': {
-        'action': url('CommonEnterAddress:post', display_region=display_region, user_journey=user_journey, sub_user_journey=sub_user_journey)
+        'action': url('RequestEnterAddress:post', display_region=display_region, user_journey=user_journey, request_type=request_type)
     }
 } -%}
 
 {%- set question_title = _('What is your postcode?') -%}
 
-{%- if (sub_user_journey == 'change-address') or (sub_user_journey == 'link-address') -%}
-    {%- set question_description = '' -%}
-{%- elif (individual == True) -%}
+{%- if (individual == True) -%}
     {%- set question_description = _('<p>To request an individual access code, we need your address</p>') -%}
-{%- elif sub_user_journey == 'access-code' -%}
+{%- elif request_type == 'access-code' -%}
     {%- set question_description = _('<p>To request an access code, we need your address</p>') -%}
 {%- else -%}
     {%- set question_description = '' -%}
