--- a/app/templates/request-code-select-address.html
+++ b/app/templates/request-code-select-address.html
@@ -10,7 +10,7 @@
 {% set form =  {
     'method': 'POST',
     'attributes': {
-        'action': url('CommonSelectAddress:post', display_region=display_region, user_journey=user_journey, sub_user_journey=sub_user_journey)
+        'action': url('RequestSelectAddress:post', display_region=display_region, user_journey=user_journey, request_type=request_type)
     }
 } %}
 
