--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -92,9 +92,6 @@
         'logoHref': 'https://www.ons.gov.uk/',
         'title': survey_name_en
     },
-    'cdn': {
-        'url': 'https://cdn.census.gov.uk/design-system/'
-    },
     'signoutButton': signout_button_value,
     'language': language,
     'footer': footer_content,
@@ -125,7 +122,7 @@
     {{
         onsCookiesBanner({
             "statementTitle": 'Tell us whether you accept cookies',
-            "statementText": 'We use <a href="' + domain_url_en + '/cookies' + '">cookies to collect information</a> about how you use census.gov.uk. We use this information to make the website work as well as possible and improve our services.',
+            "statementText": 'We use <a href="' + domain_url_en + '/cookies' + '">cookies to collect information</a> about how you use surveys.ons.gov.uk. We use this information to make the website work as well as possible and improve our services.',
             "confirmationText": 'You’ve accepted all cookies. You can <a href="' + domain_url_en + '/cookies' + '">change your cookie preferences</a> at any time.',
             "secondaryButtonUrl": domain_url_en + '/cookies'
         })
