--- a/app/templates/closed.html
+++ b/app/templates/closed.html
@@ -1,17 +1,13 @@
-{% if display_region == 'cy' %}
-    {% extends 'base-cy.html' %}
-{% else %}
-    {% extends 'base-en.html' %}
-{% endif %}
+{%- extends 'base-' + display_region + '.html' -%}
 
-{% block main %}
+{%- block main -%}
 
-<h1 data-ga="error" data-ga-category="info" data-ga-action="info-message" data-ga-label="info_type = CLOSED_CE">
-    {{ _('This survey has closed') }}
-</h1>
+    <h1>
+        {{ _('This survey has closed') }}
+    </h1>
 
-<p>{{ _('Your access code is for a survey that has now closed.') }}</p>
+    <p>{{ _('Your access code is for a survey that has now closed.') }}</p>
 
-<p>{{ _('Thank you for your help.') }}</p>
+    <p>{{ _('Thank you for your help.') }}</p>
 
-{% endblock main %}
+{%- endblock main -%}
