--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,12 +1,6 @@
-{% if display_region == 'cy' %}
-    {% extends 'base-cy.html' %}
-    {% set contact_us_link = domain_url_cy + '/cysylltu-a-ni/' %}
-{% else %}
-    {% extends 'base-en.html' %}
-    {% set contact_us_link = domain_url_en + '/contact-us/' %}
-{% endif %}
+{%- extends 'base-' + display_region + '.html' -%}
 
-{% block main %}
+{%- block main -%}
 
     <h1 data-ga="error" data-ga-category="error" data-ga-action="error-message-shown" data-ga-label="system-error">
         {{ _('Sorry, something went wrong') }}
@@ -14,9 +8,8 @@
 
     <p>{{ _('We are experiencing some technical problems.') }}</p>
 
-    {% autoescape false %}
+    {%- autoescape false -%}
         <p>{{ _('Please try again later, or %(open)scontact us%(close)s if the problem continues.', open='<a href="%s">' % contact_us_link, close='</a>')|safe }}</p>
-    {% endautoescape %}
+    {%- endautoescape -%}
 
-{% endblock main %}
-
+{%- endblock main -%}
