--- a/app/templates/request-code-sent-by-post.html
+++ b/app/templates/request-code-sent-by-post.html
@@ -28,13 +28,7 @@
 
         <h1 class="u-mb-xs u-fs-l">{{ _('A letter will be sent to %(name)s at %(address)s', name=display_name, address=display_address)|safe }} </h1>
 
-        {%- if (individual == True) -%}
-            <p>{{ _('The letter with an individual access code for you to start the census should arrive within 5 working days') }}</p>
-        {%- elif (case_type == 'CE' and address_level == 'E') -%}
-            <p>{{ _('The letter with a new manager access code for you to start the census should arrive within 5 working days') }}</p>
-        {%- else -%}
-            <p>{{ _('The letter with a new household access code for you to start the census should arrive within 5 working days') }}</p>
-        {%- endif -%}
+        <p>{{ _('The letter with a new access code for you to start the survey should arrive within 5 working days') }}</p>
 
     {%- endcall -%}
 
