--- a/app/templates/request-code-enter-address.html
+++ b/app/templates/request-code-enter-address.html
@@ -17,11 +17,11 @@
 {%- set form =  {
     'method': 'POST',
     'attributes': {
-        'action': url('RequestEnterAddress:post', display_region=display_region, user_journey=user_journey, request_type=request_type)
+        'action': url('RequestEnterPostcode:post', display_region=display_region, user_journey=user_journey, request_type=request_type)
     }
 } -%}
 
-{%- set question_title = _('What is your postcode?') -%}
+{%- set question_title = _('What is your address?') -%}
 {%- set question_description = _('<p>To request a new access code, we need your address</p>') -%}
 
 {%- block main -%}
@@ -35,19 +35,42 @@
         'description': question_description
     }) -%}
 
-        {{
-            onsInput({
-                'id': 'postcode',
-                'type': 'text',
-                'autocomplete': 'postal-code',
-                'classes': 'input--w-6',
-                'label': {
-                    'text': _('UK postcode')
-                },
-                'name': 'form-enter-address-postcode',
-                'error': error_postcode
-            })
-        }}
+        <div class="js-address-autosuggest">
+        {{ onsInput({
+            "id": "address-lookup",
+            "label": {
+                "text": "Enter address or postcode and select from results",
+                "id": "address-lookup-label",
+                "classes": "js-autosuggest-label"
+            },
+            "autocomplete": "off",
+            "autosuggest":{
+                "classes": "js-address-not-editable",
+                "instructions": "Use up and down keys to navigate suggestions once you\'ve typed more than two characters. Use the enter key to select a suggestion. Touch device users, explore by touch or with swipe gestures.",
+                "ariaYouHaveSelected": "You have selected",
+                "ariaMinChars": "Enter 3 or more characters for suggestions.",
+                "ariaResultsLabel": "Address suggestions",
+                "ariaOneResult": "There is one suggestion available.",
+                "ariaNResults": "There are {n} suggestions available.",
+                "ariaLimitedResults": "Results have been limited to 10 suggestions. Type more characters to improve your search",
+                "ariaGroupedResults": "There are {n} addresses for {x}",
+                "groupCount": "{n} addresses",
+                "moreResults": "Enter more of the address to improve results",
+                "resultsTitle": "Select an address",
+                "noResults": "No results found. Try entering a different part of the address",
+                "typeMore": "Enter more of the address to get results",
+                "tooManyResults": "{n} results found. Enter more of the address to improve results",
+                "externalInitialiser": true,
+                "APIDomain": "https://whitelodge-eq-ai-api.census-gcp.onsdigital.uk",
+                'APIDomainBearerToken': '',
+                "errorTitle": "There is a problem with your answer",
+                "errorMessageEnter": "Enter an address",
+                "errorMessageSelect": "Select an address",
+                "errorMessageAPI": "Sorry, there was a problem loading addresses. We are working to fix the problem. Please try again later."
+            }
+        })
+    }}
+            </div>
 
     {%- endcall -%}
 
