--- a/app/templates/request-code-sent-by-text.html
+++ b/app/templates/request-code-sent-by-text.html
@@ -1,7 +1,7 @@
 {%- extends 'base-' + display_region + '.html' -%}
 
 {%- set start_survey_link = url('Start:get', display_region=display_region) -%}
-{%- set request_code_link = url('RequestEnterAddress:get', display_region=display_region, user_journey='request', request_type=request_type) -%}
+{%- set request_code_link = url('RequestEnterPostcode:get', display_region=display_region, user_journey='request', request_type=request_type) -%}
 
 {%- from 'components/button/_macro.njk' import onsButton -%}
 {%- from "components/panel/_macro.njk" import onsPanel -%}
