--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -1,6 +1,6 @@
 {% extends 'base-' + display_region + '.html' %}
 
-{% set request_access_code_link = url('RequestEnterAddress:get', display_region=display_region, user_journey='request', request_type='access-code') %}
+{% set request_access_code_link = url('RequestEnterPostcode:get', display_region=display_region, user_journey='request', request_type='access-code') %}
 
 {% from 'components/uac/_macro.njk' import onsUACInput %}
 {% from 'components/button/_macro.njk' import onsButton %}
