--- a/app/templates/request-code-enter-address.html
+++ b/app/templates/request-code-enter-address.html
@@ -44,7 +44,6 @@
                 "classes": "js-autosuggest-label"
             },
             'name': 'form-enter-address-typeahead',
-            'mandatory': true,
             "autocomplete": "off",
             "autosuggest":{
                 "classes": "js-address-not-editable",
@@ -63,12 +62,13 @@
                 "typeMore": "Enter more of the address to get results",
                 "tooManyResults": "{n} results found. Enter more of the address to improve results",
                 "externalInitialiser": true,
-                "APIDomain": "https://whitelodge-eq-ai-api.census-gcp.onsdigital.uk",
+                "APIDomain": aims_domain,
                 'APIDomainBearerToken': jwt,
                 "errorTitle": "There is a problem with your answer",
                 "errorMessageEnter": "Enter an address",
                 "errorMessageSelect": "Select an address",
-                "errorMessageAPI": "Sorry, there was a problem loading addresses. We are working to fix the problem. Please try again later."
+                "errorMessageAPI": "Sorry, there was a problem loading addresses. We are working to fix the problem. Please try again later.",
+                'mandatory': true,
             }
         })
     }}
