--- a/app/templates/request-code-sent-by-post.html
+++ b/app/templates/request-code-sent-by-post.html
@@ -28,7 +28,7 @@
 
         <h1 class="u-mb-xs u-fs-l">{{ _('A letter will be sent to %(name)s at %(address)s', name=display_name, address=display_address)|safe }} </h1>
 
-        <p>{{ _('The letter with a new access code for you to start the survey should arrive within 5 working days') }}</p>
+        <p>{{ _('The letter with a new access code for you to start the study should arrive within 5 working days') }}</p>
 
     {%- endcall -%}
 
