--- a/app/templates/request-code-sent-by-text.html
+++ b/app/templates/request-code-sent-by-text.html
@@ -1,6 +1,6 @@
 {%- extends 'base-' + display_region + '.html' -%}
 
-{%- set start_survey_link = url('Start:get', display_region=display_region) -%}
+{%- set start_study_link = url('Start:get', display_region=display_region) -%}
 {%- set request_code_link = url('RequestEnterAddress:get', display_region=display_region, user_journey='request', request_type=request_type) -%}
 
 {%- from 'components/button/_macro.njk' import onsButton -%}
@@ -22,7 +22,7 @@
             <h1 class="u-mb-xs u-fs-l">{{ _('A text has been sent to %(number)s', number=submitted_mobile_number|replace(" ", "&nbsp;"))|safe }} </h1>
         {%- endautoescape -%}
 
-        <p>{{ _('The text message with a new access code should arrive soon for you to start your survey') }}</p>
+        <p>{{ _('The text message with a new access code should arrive soon for you to start your study') }}</p>
 
     {%- endcall -%}
 
@@ -44,14 +44,14 @@
         <p class="u-mb-l">{{ _("It can take a few minutes for the text to arrive. If it doesn’t arrive, you can %(open)srequest a new access code%(close)s.", open='<a href="%s">' % request_code_link, close='</a>')|safe }}</p>
     {%- endautoescape -%}
 
-    <h2 class="u-mb-s u-fs-m">{{ _("Ready to start your survey?") }}</h2>
+    <h2 class="u-mb-s u-fs-m">{{ _("Ready to start your study?") }}</h2>
 
     {{
         onsButton({
             'type': 'button',
-            'text': _('Start survey'),
+            'text': _('Start study'),
             'classes': 'u-mb-m',
-            'url': start_survey_link
+            'url': start_study_link
         })
     }}
 
