SOCINT-156: Set-up for 'register' journey Added parent name input and unit tests Re-order journey

--- a/app/templates/register-child-summary.html
+++ b/app/templates/register-child-summary.html
@@ -37,7 +37,7 @@
                                             {
                                                 "text": "Change",
                                                 "ariaLabel": "Change answer",
-                                                "url": url('RegisterEnterName:get', display_region=display_region, request_type=request_type)
+                                                "url": url('RegisterEnterChildName:get', display_region=display_region, request_type=request_type)
                                             }
                                         ]
                                     }
