--- a/app/templates/register-confirm-mobile.html
+++ b/app/templates/register-confirm-mobile.html
@@ -18,7 +18,7 @@
                 {
                     'id': 'yes',
                     'label': {
-                        'text': _('Yes, process my registration')
+                        'text': _('Yes, my mobile number is correct')
                     },
                     'value': 'yes'
                 },
