--- a/app/templates/register-enter-child-name.html
+++ b/app/templates/register-enter-child-name.html
@@ -17,12 +17,12 @@
 {%- if 'error_first_name_len' in field_messages_dict -%}
     {%- set error_first_name = {'id': 'error_first_name_len', 'text': _('You have entered too many characters. Enter up to 35 characters')} -%}
 {%- elif 'error_first_name' in field_messages_dict -%}
-    {%- set error_first_name = {'id': 'error_first_name', 'text': _('Enter your first name')} -%}
+    {%- set error_first_name = {'id': 'error_first_name', 'text': _("Enter your child's first name")} -%}
 {%- endif -%}
 {%- if 'error_last_name_len' in field_messages_dict -%}
     {%- set error_last_name = {'id': 'error_last_name_len', 'text': _('You have entered too many characters. Enter up to 35 characters')} -%}
 {%- elif 'error_last_name' in field_messages_dict -%}
-    {%- set error_last_name = {'id': 'error_last_name', 'text': _('Enter your last name')} -%}
+    {%- set error_last_name = {'id': 'error_last_name', 'text': _("Enter your child's last name")} -%}
 {%- endif -%}
 
 {% block main %}
@@ -32,7 +32,7 @@
     {% endif %}
 
     {% call onsQuestion({
-        'title': _("What is the parent/guardian's name?"),
+        'title': _('Who would you like to register?'),
     }) %}
 
 {%- if ('error_last_name' in field_messages_dict) or ('error_last_name_len' in field_messages_dict) -%}
@@ -158,7 +158,7 @@
 
     {{
         onsButton({
-            'text': _('Continue'),
+            'text': _('Save and continue'),
             'classes': 'ons-u-mt-l'
         })
     }}
